--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^4.3.1",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
+    "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
